# esp32-s3-rust-template

./: .gitignore  Cargo.toml  sdkconfig.defaults
src/: freq_meter.rs  main.rs
