[package]
name = "std-rust"
version = "0.1.0"
authors = ["fizlrock <nirku0soft@yandex.ru>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "std-rust"
harness = false   # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow      = "=1.0.86"
esp-idf-svc = "=0.49.0"
esp-idf-hal= "*"
esp-idf-sys = "0.35.0"
log         = "=0.4.22"
tungstenite = "0.24.0"
# prost = "0.13"
rgb = "0.8.50"
regex = "1.11.1"


[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"     # Necessary until a new version of `esp-idf-sys` is released
